changes based on requirements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="images/logo.svg" alt="Logo" class="logo" />
 
       <p class="info">
-        Strona w budowie <br />
+        strona w budowie <br />
         2025
       </p>
     </div>
