--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Placeholder</title>
+    <title>zryw</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Calluna+Semibold&display=swap"
       rel="stylesheet"
